# FaceVideoCropper

./: CMakeLists.txt  FaceCropping.cpp  README.md  main.cpp
OpenFace/: InstallOpenface2.0.md
OpenFace/note/: Openface2.0.md  TableOfContents-lib.md  字段解释.md
OpenFace/note/paper/: CLMNode.md  CLM模型介绍.txt
config/: config.cpp  config.h
modules/: face_clipper.cpp  face_clipper.h  face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  target_processing.cpp  target_processing.h  target_tracker.cpp  target_tracker.h  video_clipper.cpp  video_clipper.h  video_io.cpp  video_io.h
notes/: 优化.md  模型下载.md  环境配置.md
python/: README.md  config.json  main.py  requirements.txt
python/data/: join.py
python/log/train_20250519_131821/: config.json  dataset_info.txt  device_info.txt  training_time.txt
python/log/train_20250519_134255/: config.json  dataset_info.txt  training_time.txt
python/log/train_20250519_140238/: config.json  training_time.txt
python/log/train_20250519_140533/: config.json  training_time.txt
python/log/train_20250519_142521/: config.json  dataset_info.txt  training_time.txt
python/log/train_20250519_142736/: config.json  training_time.txt
python/log/train_20250520_122102/: config.json  training_time.txt
python/src/: classifier.py  data_loader.py  fusion.py  image_branch.py  model.py  structured_branch.py  train.py
utils/: timing_logger.cpp  timing_logger.h  vector_math.cpp  vector_math.h
